Inloggning och gästbok med databas

--- a/v45/templates/annansida.html
+++ b/v45/templates/annansida.html
@@ -5,9 +5,36 @@
     <p>
         Du kan även skriva något här:
             <form method="post" action="/append">
-                <input type="text" name="line" size="40" placeholder="Skriv något">
+                <textarea id="text" name="line" rows="4" cols="50" placeholder="Skriv något"></textarea>
                 <input type="submit" value="Spara">
             </form>
     </p>
+    <style>
+        table {
+            width: 50%;
+            border-collapse: collapse;
+        }
+        th, td {
+            border: 1px solid black;
+        }
+    </style>
+    <p>Tidigare inlägg:
+            <table>
+        <tr>
+            <th>Författare</th>
+            <th>Inlägg</th>
+            <th>Tid</th>
+        </tr>
+{% for post in posts %}
+        <tr>
+            <!-- i tur och ordning: användarnamn, text, klockslag -->
+            <td>{{ post[1] }}</td>
+            <td>{{ post[2] }}</td>
+            <td>{{ post[3] }}</td>
+        </tr>
+{% endfor %}
+    </table>
+    </p>
     <p><a href="/login">Tillbaka till startsidan</a></p>
+    <p><a href="/logout">Logga ut</a></p>
 {% endblock %}
